--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
           <div class="row align-items-center">
             <div class="col-lg-5 col-md-6">
               <div class="about-img">
-                <img src="img/Rectangle 3.png" alt="Image" />
+                <img src="img/Rectangle 3.png" alt="Image"  id="abimg"/>
               </div>
             </div>
             <div class="col-lg-7 col-md-6">
@@ -114,13 +114,13 @@
                 <h2>About Us</h2>
               </div>
               <div class="about-text">
-                <p>
+                <p class="abp1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Phasellus nec pretium mi. Curabitur facilisis ornare velit non
                   vulputate. Aliquam metus tortor, auctor id gravida
                   condimentum, viverra quis sem.
                 </p>
-                <p>
+                <p class="abp2">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Phasellus nec pretium mi. Curabitur facilisis ornare velit non
                   vulputate. Aliquam metus tortor, auctor id gravida
@@ -335,7 +335,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="footer-about">
                 <h2>About Us</h2>
-                <p>
+                <p class="abpf1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Quisque eu lectus a leo tristique dictum nec non quam.
                   Suspendisse convallis, tortor eu placerat rhoncus, lorem quam
@@ -369,12 +369,12 @@
                 <div class="col-md-6 col-lg-4">
                   <div class="footer-contact">
                     <h2>Get In Touch</h2>
-                    <p>
+                    <p class="location">
                       <i class="fa fa-map-marker-alt"></i>123 Street, New York,
                       USA
                     </p>
-                    <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope"></i>info@example.com</p>
+                    <p class="phnumber"><i class="fa fa-phone-alt"></i>+012 345 67890</p>
+                    <p class="email"><i class="fa fa-envelope"></i>info@example.com</p>
                     <div class="footer-social">
                       <a href="#"><i class="fab fa-twitter"></i></a>
                       <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -424,6 +424,7 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="Api/api.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
