--- a/contact.html
+++ b/contact.html
@@ -135,22 +135,22 @@
                 <div class="contact-item">
                   <i class="fa fa-map-marker-alt"></i>
                   <div class="contact-text">
-                    <h2>Location</h2>
-                    <p>123 Street, New York, USA</p>
+                    <h2 >Location</h2>
+                    <p class="location">123 Street, New York, USA</p>
                   </div>
                 </div>
                 <div class="contact-item">
                   <i class="fa fa-phone-alt"></i>
                   <div class="contact-text">
                     <h2>Phone</h2>
-                    <p>+012 345 67890</p>
+                    <p class="phnumber">+012 345 67890</p>
                   </div>
                 </div>
                 <div class="contact-item">
                   <i class="fa fa-envelope"></i>
                   <div class="contact-text">
                     <h2>Email</h2>
-                    <p>info@example.com</p>
+                    <p class="email">info@example.com</p>
                   </div>
                 </div>
               </div>
