--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
           <div class="row portfolio-container">
             <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
               <div class="portfolio-wrap">
-                <img src="img/portfolio-1.jpg" alt="Portfolio Image" />
+                <img  class="cimg1" src="img/portfolio-1.jpg" alt="Portfolio Image" />
                 <figure>
                   <p>Crime</p>
                   <a href="#">Murder Case</a>
@@ -152,7 +152,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
               <div class="portfolio-wrap">
-                <img src="img/portfolio-2.jpg" alt="Portfolio Image" />
+                <img   class="cimg2" src="img/portfolio-2.jpg" alt="Portfolio Image" />
                 <figure>
                   <p>Politics</p>
                   <a href="#">Political Case</a>
@@ -162,7 +162,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
               <div class="portfolio-wrap">
-                <img src="img/portfolio-3.jpg" alt="Portfolio Image" />
+                <img   class="cimg3" src="img/portfolio-3.jpg" alt="Portfolio Image" />
                 <figure>
                   <p>Family</p>
                   <a href="#">Divorce Case</a>
@@ -172,7 +172,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first">
               <div class="portfolio-wrap">
-                <img src="img/portfolio-4.jpg" alt="Portfolio Image" />
+                <img   class="cimg4" src="img/portfolio-4.jpg" alt="Portfolio Image" />
                 <figure>
                   <p>Finance</p>
                   <a href="#">Money Laundering</a>
@@ -182,7 +182,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second">
               <div class="portfolio-wrap">
-                <img src="img/portfolio-5.jpg" alt="Portfolio Image" />
+                <img    class="cimg5"src="img/portfolio-5.jpg" alt="Portfolio Image" />
                 <figure>
                   <p>Business</p>
                   <a href="#">Weber & Partners</a>
@@ -192,7 +192,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third">
               <div class="portfolio-wrap">
-                <img src="img/portfolio-6.jpg" alt="Portfolio Image" />
+                <img   class="cimg6" src="img/portfolio-6.jpg" alt="Portfolio Image" />
                 <figure>
                   <p>Finance</p>
                   <a href="#">Property Sharing Case</a>
