--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="container-fluid">
                     <nav class="navbar navbar-expand-lg ">
                         <a href="#" class="navbar-brand">
-                            <img src="/img/Group 2032.png" alt="" width="200px" id="juris" class="navbar-brand">
+                            <img src="/img/Group 2032.png" alt="logo" width="200px" id="juris" class="navbar-brand">
                         </a>
                         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                             <span class="navbar-toggler-icon">
@@ -79,7 +79,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/2296f93e16 1.jpg" alt="Carousel Image">
+                        <img src="img/2296f93e16 1.jpg" alt="Carousel Image" id="caro-img-1">
                         <div class="carousel-caption">
                             <h1 class="animated fadeInLeft">We fight </h1>
                             
@@ -90,20 +90,20 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/carousel-2.jpg" alt="Carousel Image">
+                        <img src="img/carousel-2.jpg" alt="Carousel Image" id="caro-img-2">
                         <div class="carousel-caption">
-                            <h1 class="animated fadeInLeft">We prepared to oppose for you</h1>
-                            <p class="animated fadeInRight">Lorem ipsum dolor sit amet elit. Mauris odio mauris...</p>
-                            <a class="btn animated fadeInUp" href="#">Get free consultation</a>
+                            <h1 class="animated fadeInLeft" id="scndcarotitle">We prepared to oppose for you</h1>
+                            <p class="animated fadeInRight" id="scndcaropara">Lorem ipsum dolor sit amet elit. Mauris odio mauris...</p>
+                            <a class="btn animated fadeInUp" href="#" id="scndcaroa">Get free consultation</a>
                         </div>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/carousel-3.jpg" alt="Carousel Image">
+                        <img src="img/carousel-3.jpg" alt="Carousel Image" id="caro-img-3">
                         <div class="carousel-caption">
-                            <h1 class="animated fadeInLeft">We fight for your privilege</h1>
-                            <p class="animated fadeInRight">Lorem ipsum dolor sit amet elit. Mauris odio mauris...</p>
-                            <a class="btn animated fadeInUp" href="#">Get free consultation</a>
+                            <h1 class="animated fadeInLeft" id="scndcaro3title">We fight for your privilege</h1>
+                            <p class="animated fadeInRight" id="scndcaro3para">Lorem ipsum dolor sit amet elit. Mauris odio mauris...</p>
+                            <a class="btn animated fadeInUp" id="scndca3roa" href="#">Get free consultation</a>
                         </div>
                     </div>
                 </div>
